--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
             <a href="./pages/informacion.html" class="btn-1">Información</a>
         </div>
         <div class="header-img"> 
-            <img src="   " alt="">
+            <img src="./imagene/inicio.png" alt="">
         </div>
     </div>
 
@@ -60,22 +60,22 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
 
 <section class="oferts container"> 
     <div class="ofert-1">
-        <img src="./Imagenes/f1.png" alt="">
+        <img src="./imagene/granola.png" alt="">
         <h3>Oferta</h3>
         <p>$1.500</p>
     </div>
     <div class="ofert-1">
-            <img src="./Imagenes/f2.png" alt="">
+            <img src="./imagene/jugo naranja.png" alt="">
             <h3>Oferta</h3>
             <p>$800</p>
     </div>
     <div class="ofert-1">
-            <img src="./Imagenes/f3.png"alt="">
+            <img src="./imagene/limonada.png"alt="">
             <h3>Oferta</h3>
             <p>$700</p>
     </div> 
     <div class="ofert-1">
-            <img src="./Imagenes/f4.png" alt="">
+            <img src="./imagene/paquete mora.png" alt="">
             <h3>Oferta</h3>
             <p>$1000</p>
     </div>
@@ -87,7 +87,7 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
     <div class="product-content">
 
         <div class="product">
-           <img src="./Imagenes/pr1.png" alt="">
+           <img src="./imagene/naranajs.png" alt="">
            <div class="product-txt">
            <h3>Productos</h3>
            <p class="precio">$1200</p>
@@ -98,9 +98,9 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
     <div class="product-content">
 
         <div class="product">
-           <img src="./Imagenes/pr1.png" alt="">
+           <img src="./imagene/manzanas.png" alt="">
            <div class="product-txt">
-           <h3>Productos</h3>
+           <h3>Manzanas</h3>
            <p class="precio">$1394</p>
            <button onclick="agregarAlCarrito('Manzanas', 2700)">Agregar al Carrito</button>
         </div>
@@ -109,29 +109,29 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
     <div class="product-content">
 
         <div class="product">
-           <img src="./Imagenes/pr1.png" alt="">
+           <img src="./imagene/banana.png" alt="">
            <div class="product-txt">
-           <h3>Productos</h3>
+           <h3>Bananas</h3>
            <p class="precio">$1500</p>
-           <button onclick="agregarAlCarrito('Airpods', 29.99)">Agregar al Carrito</button>
+           <button onclick="agregarAlCarrito('Banana', 1700)">Agregar al Carrito</button>
     </div>
     </div>
         
         <div class="product">
-            <img src="./Imagenes/pr2.png" alt="">
+            <img src="./imagene/limon amarillo.png" alt="">
             <div class="product-txt">
-            <h3>Productos</h3>
-            <p class="precio">$1344</p>
-            <button onclick="agregarAlCarrito('Airpods', 29.99)">Agregar al Carrito</button>
+            <h3>Limón</h3>
+            <p class="precio">$980</p>
+            <button onclick="agregarAlCarrito('Limón', 980)">Agregar al Carrito</button>
         </div>
     </div>
 
         <div class="product">
-            <img src="./Imagenes/pr3.png" alt="">
+            <img src="./imagene/arandano.png" alt="">
             <div class="product-txt">
-            <h3>Productos</h3>
+            <h3>Arándanos</h3>
             <p class="precio">$900</p>
-            <button onclick="agregarAlCarrito('Airpods', 29.99)">Agregar al Carrito</button>
+            <button onclick="agregarAlCarrito('Arándanos', 1800)">Agregar al Carrito</button>
         </div>
     </div>
 
@@ -139,13 +139,13 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
 <section class="service"> 
 
     <div class="service-1" alt= "">
-         <img class="store" src="./Imagenes/f1.png" alt="">
+         <img class="store" src="./imagene/pomelo.png" alt="">
     </div>
     <div class="service-2">
-        <img class="store" src="./Imagenes/f2.png" alt="">
+        <img class="store" src="./imagene/mora.png" alt="">
     </div>
     <div class="service-3">
-        <img class="store" src="./Imagenes/f3.png" alt="">
+        <img class="store" src="./imagene/paquete mora.png" alt="">
     </div>
 
  </section>
