--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <header class="header"> 
 <div class="menu container">
     <a href="./index.html" class="logo">Fruteria y verduleria</a> 
-    <input type="checkbox" id="menu"/>
-    <label for="menu"> 
-        <img src="./Imagenes/menu.png" class="menu-icono"alt="">
-    </label>
+    
+
+
+    
     <nav class="navbar">
         <ul>
             <li> <a href="./index.html">Inicio</a></li>
@@ -90,7 +90,7 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
            <img src="./imagene/naranajs.png" alt="">
            <div class="product-txt">
            <h3>Productos</h3>
-           <p class="precio">$1200</p>
+           <p class="Naranjas">$1200</p>
            <button onclick="agregarAlCarrito('Naranjas', 1000)">Agregar al Carrito</button>
         </div>
     </div>
