--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
 
 
-    
+
     <nav class="navbar">
         <ul>
             <li> <a href="./index.html">Inicio</a></li>
@@ -89,7 +89,7 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
         <div class="product">
            <img src="./imagene/naranajs.png" alt="">
            <div class="product-txt">
-           <h3>Productos</h3>
+           <h3>Naranjas</h3>
            <p class="Naranjas">$1200</p>
            <button onclick="agregarAlCarrito('Naranjas', 1000)">Agregar al Carrito</button>
         </div>
