--- a/pages/acercade.html
+++ b/pages/acercade.html
@@ -42,7 +42,7 @@ Nuestra historia es un testimonio de la dedicación a la calidad, la pasión por
 <h1 class="titulo"> ¿Dónde nos podes encontrar?</h1>
 <section class="location">
     <p>Nuestra Ubicación</p>
-    <p>Dirección: Av. las Américas, Aristóbulo del Valle, Misiones</p>
+    <p>Dirección: Av. de las Américas, Aristóbulo del Valle, Misiones.</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28414.074938999598!2d-54.9315700100338!3d-27.10088232056874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f849bd95e93405%3A0xb3f783554172ca46!2sArist%C3%B3bulo%20del%20Valle%2C%20Misiones!5e0!3m2!1ses!2sar!4v1702053492439!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </main>
 </header>
