--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
             <a href="./pages/informacion.html" class="btn-1">Información</a>
         </div>
         <div class="header-img"> 
-            <img src="./imagene/inicio.png" alt="">
+            <img src="./imagenes/inicio.png" alt="">
         </div>
     </div>
 
@@ -60,22 +60,22 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
 
 <section class="oferts container"> 
     <div class="ofert-1">
-        <img src="./imagene/granola.png" alt="">
+        <img src="./imagenes/granola.png" alt="">
         <h3>Oferta</h3>
         <p>$1.500</p>
     </div>
     <div class="ofert-1">
-            <img src="./imagene/jugo naranja.png" alt="">
+            <img src="./imagenes/jugo naranja.png" alt="">
             <h3>Oferta</h3>
             <p>$800</p>
     </div>
     <div class="ofert-1">
-            <img src="./imagene/limonada.png"alt="">
+            <img src="./imagenes/limonada.png"alt="">
             <h3>Oferta</h3>
             <p>$700</p>
     </div> 
     <div class="ofert-1">
-            <img src="./imagene/paquete mora.png" alt="">
+            <img src="./imagenes/paquete mora.png" alt="">
             <h3>Oferta</h3>
             <p>$1000</p>
     </div>
@@ -87,7 +87,7 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
     <div class="product-content">
 
         <div class="product">
-           <img src="./imagene/naranajs.png" alt="">
+           <img src="./imagenes/naranajs.png" alt="">
            <div class="product-txt">
            <h3>Naranjas</h3>
            <p class="Naranjas">$1200</p>
@@ -98,7 +98,7 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
     <div class="product-content">
 
         <div class="product">
-           <img src="./imagene/manzanas.png" alt="">
+           <img src="./imagenes/manzanas.png" alt="">
            <div class="product-txt">
            <h3>Manzanas</h3>
            <p class="precio">$1394</p>
@@ -109,7 +109,7 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
     <div class="product-content">
 
         <div class="product">
-           <img src="./imagene/banana.png" alt="">
+           <img src="./imagenes/banana.png" alt="">
            <div class="product-txt">
            <h3>Bananas</h3>
            <p class="precio">$1500</p>
@@ -118,7 +118,7 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
     </div>
         
         <div class="product">
-            <img src="./imagene/limon amarillo.png" alt="">
+            <img src="./imagenes/limon amarillo.png" alt="">
             <div class="product-txt">
             <h3>Limón</h3>
             <p class="precio">$980</p>
@@ -127,7 +127,7 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
     </div>
 
         <div class="product">
-            <img src="./imagene/arandano.png" alt="">
+            <img src="./imagenes/arandano.png" alt="">
             <div class="product-txt">
             <h3>Arándanos</h3>
             <p class="precio">$900</p>
@@ -139,13 +139,13 @@ Nos enorgullece ofrecer productos frescos y de temporada. Trabajamos en estrecha
 <section class="service"> 
 
     <div class="service-1" alt= "">
-         <img class="store" src="./imagene/pomelo.png" alt="">
+         <img class="store" src="./imagenes/pomelo.png" alt="">
     </div>
     <div class="service-2">
-        <img class="store" src="./imagene/mora.png" alt="">
+        <img class="store" src="./imagenes/mora.png" alt="">
     </div>
     <div class="service-3">
-        <img class="store" src="./imagene/paquete mora.png" alt="">
+        <img class="store" src="./imagenes/paquete mora.png" alt="">
     </div>
 
  </section>
